deploy: a7c79e0ab4f56d7d9b90ff41960c3c6fa6267c83

--- a/pages/impressum/index.html
+++ b/pages/impressum/index.html
@@ -233,7 +233,7 @@ Germany<br>
 </p>
 <p>
 Email: boris@terzic.be<br>
-Tel.:  +49 151 582 13 113
+Tel.: country code 49, number 0151 582 13 113
 </p>
     </main>
     <footer>
