deploy: 83d3ceb400fcad20d381ec1470e3504a9fa58b14

--- a/pages/blog-styleguide/index.html
+++ b/pages/blog-styleguide/index.html
@@ -218,7 +218,13 @@ p code {
     <main>
       <h1>Styleguide</h1>
 <h2>Capitalization of Programming Frameworks, Libraries and Standards</h2>
-<p>TODO: Typescript, Javascript, ES6, etc</p>
+<p>In general products and services are capitalized based on how the originator intended it. Some specific examples are:</p>
+<ul>
+<li>JavaScript</li>
+<li>TypeScript</li>
+<li>ES6: an abbreviation for the &quot;ECMAScript 6th edition&quot; specification which is implemented by JavaScript</li>
+<li>Git</li>
+</ul>
 
     </main>
     <footer>
