--- a/pages/impressum/index.html
+++ b/pages/impressum/index.html
@@ -20,8 +20,8 @@
 .flex {flex: 1}
 html {
   --spacing-xs: 8px;
-  --spacing: 24px;
   --spacing-s: 12px;
+  --spacing: 24px;
   --spacing-m: 36px;
   /* Color scheme 324, page 233 */
   --pompeian-red: rgb(162, 46, 55);
@@ -72,6 +72,7 @@ footer {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'EB Garamond', serif;
+  line-height: 
 }
 
 nav {
@@ -137,9 +138,14 @@ h1, h2, h3, p {
   font-weight: normal;
 }
 
+/* To make <time> be close to the header, this may be a bit too rough */
+h1 {
+  margin: 0;
+}
+
 h1 {
   border-bottom: 1px solid black;
-  padding-bottom: var(--spacing-s);
+  padding-bottom: var(--spacing-xs);
 }
 
 h2 {
@@ -199,15 +205,20 @@ p code {
   display: block;
   font-family: monospace;
   font-size: 12px;
+  line-height: 1;
 }
 
 @media only screen and (min-width: 1000px)  {
   .postlist time {
     display: inline-block;
-    width: 18ch;
     text-align: right;
-    margin-right: 1ch;
-    margin-left: -18ch;
+    width: 19ch;
+    margin: 0 0 0 -19ch;
+    padding-right: 1ch;
+  }
+
+  .postlist a {
+    
   }
 
   .postlist time:after {
@@ -231,16 +242,13 @@ p code {
       
 <h1>Impressum</h1>
 <p>
-Owner of this website is Boris Terzic.
+Owner of this website is Boris Terzic:
 </p>
-<p>
-Address:
 <address>
 Durmersheimer Straße 36<br>
 76185 Karlsruhe<br>
 Germany<br>
 </address>
-</p>
 <p>
 Email: boris@terzic.be<br>
 Tel.: country code 49, number 0151 582 13 113
