deploy: 35a2eda5769e5e64908db303f23842e04b475528

--- a/pages/impressum/index.html
+++ b/pages/impressum/index.html
@@ -234,7 +234,7 @@ p code {
         <ol>
           <li><a href="/">Home</a></li>
           <li><a href="/pages/blog-styleguide/">Styleguide</a></li>
-          <li><a href="/pages/impressum/">Impressum</a></li>
+          <li><a href="/pages/impressum/">About</a></li>
         </ol>
       </nav>
     </header>
@@ -242,17 +242,9 @@ p code {
       
 <h1>Impressum</h1>
 <p>
-Owner of this website is Boris Terzic:
+Owner of this website is <a href="https://twitter.com/boristerzic">Boris Terzic</a>.
 </p>
-<address>
-Durmersheimer Straße 36<br>
-76185 Karlsruhe<br>
-Germany<br>
-</address>
-<p>
-Email: boris@terzic.be<br>
-Tel.: country code 49, number 0151 582 13 113
-</p>
+
     </main>
     <footer>
       <!-- dotted diple -->
