deploy: 3d2409e8270c69ecfd0dff114561c0bafe755ea4

--- a/pages/impressum/index.html
+++ b/pages/impressum/index.html
@@ -275,7 +275,7 @@ p code {
       
 <h1>Impressum</h1>
 <p>
-Owner of this website is <a href="https://twitter.com/boristerzic">Boris Terzic</a>.
+Owner of this website is Boris Terzic. <a href="https://c.im/@bterzic">Follow me on Mastodon</a>.
 </p>
 
     </main>
