deploy: 11c44edac86260ae9676c7a4c1e42a3b02205cbf

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ section.postlist {
       
 <div class="index-container">
   <section class="logo-section">
-    <img src="images/bauhaus-logo.png" alt="Bauhaus Logo" />
+    <img src="images/bauhaus-logo.webp" alt="Bauhaus Logo" />
   </section>
 
   <section class="postlist">
